# roundtable

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
.github/: python-tests.yaml
roundtable/: __init__.py  chat_message.py  conversation.py  hello.py  personas.py  system_prompt.txt
tests/: main.py
