[project]
name = "roundtable"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.8.2",
    "rich>=13.8.0",
    "typer>=0.12.5",
]
dynamic = ["version"]

[tool.uv]
dev-dependencies = [
    "flit>=3.9.0",
    "mypy>=1.11.2",
    "pytest>=8.3.2",
    "ruff>=0.6.3",
]




